Implement GitHub, Google, and Facebook social login functionality

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,10 @@
-Flask==2.3.3
-Flask-Cors==4.0.0
-Flask-SQLAlchemy==3.1.1
+Flask==2.2.3
+Flask-SQLAlchemy==3.0.3
+Flask-Migrate==4.0.4
 Flask-Bcrypt==1.0.1
-Flask-JWT-Extended==4.5.2
+Flask-JWT-Extended==4.4.4
+Flask-Cors==3.0.10
+PyJWT==2.6.0
 python-dotenv==1.0.0
-SQLAlchemy==2.0.20 
+requests==2.28.2
+authlib==1.2.0 
