Implement email verification system with resend functionality and status indicators

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,5 +20,13 @@ FACEBOOK_CLIENT_ID=your_facebook_app_id
 FACEBOOK_CLIENT_SECRET=your_facebook_app_secret
 FACEBOOK_REDIRECT_URI=http://localhost:5000/api/auth/facebook/callback
 
+# Email settings
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USE_TLS=True
+MAIL_USERNAME=your_email@gmail.com
+MAIL_PASSWORD=your_app_password
+MAIL_DEFAULT_SENDER=Your App <your_email@gmail.com>
+
 # Frontend URL
 FRONTEND_URL=http://localhost:3000 
