--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,9 @@ Flask-Migrate==4.0.4
 Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.4.4
 Flask-Cors==3.0.10
+Flask-Mail==0.9.1
 PyJWT==2.6.0
 python-dotenv==1.0.0
 requests==2.28.2
-authlib==1.2.0 
+authlib==1.2.0
+itsdangerous==2.1.2 
