--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,4 +9,7 @@ PyJWT==2.6.0
 python-dotenv==1.0.0
 requests==2.28.2
 authlib==1.2.0
-itsdangerous==2.1.2 
+itsdangerous==2.1.2
+pyotp==2.8.0
+qrcode==7.4.2
+Pillow==10.0.0 
