--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 # Flask settings
 SECRET_KEY=your_secret_key_here
 JWT_SECRET_KEY=your_jwt_secret_key_here
+DATA_ENCRYPTION_KEY=your_data_encryption_key_here
 
 # Database settings
 SQLALCHEMY_DATABASE_URI=sqlite:///app.db
