--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,7 @@
 SECRET_KEY=your_secret_key_here
 JWT_SECRET_KEY=your_jwt_secret_key_here
 DATA_ENCRYPTION_KEY=your_data_encryption_key_here
+ENCRYPTION_SALT=random_hex_string_for_encryption_salt
 
 # Database settings
 SQLALCHEMY_DATABASE_URI=sqlite:///app.db
