--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,21 @@
 Flask==2.2.3
-Flask-SQLAlchemy==3.0.3
-Flask-Migrate==4.0.4
 Flask-Bcrypt==1.0.1
-Flask-JWT-Extended==4.4.4
 Flask-Cors==3.0.10
+Flask-JWT-Extended==4.4.4
 Flask-Mail==0.9.1
-PyJWT==2.6.0
-python-dotenv==1.0.0
-requests==2.28.2
-authlib==1.2.0
+Flask-Migrate==4.0.4
+Flask-SQLAlchemy==3.0.3
+SQLAlchemy==2.0.4
+Authlib==1.2.0
+Werkzeug==2.2.3
+alembic==1.9.4
+bcrypt==4.0.1
+cryptography==40.0.2
+email-validator==1.3.1
 itsdangerous==2.1.2
 pyotp==2.8.0
+python-dotenv==1.0.0
 qrcode==7.4.2
-Pillow==10.0.0
-cryptography==41.0.3 
+requests==2.28.2
+gunicorn==20.1.0
+pytest==7.3.1 
