--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "autoprefixer": "^10.4.15",
+    "axios": "^1.5.0",
+    "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.16.0",
-    "axios": "^1.5.0",
-    "tailwindcss": "^3.3.3",
-    "postcss": "^8.4.30",
-    "autoprefixer": "^10.4.15",
-    "@heroicons/react": "^2.0.18"
+    "tailwindcss": "^3.3.3"
   },
   "scripts": {
     "start": "vite",
@@ -21,4 +22,4 @@
     "@vitejs/plugin-react": "^4.0.4",
     "vite": "^4.4.9"
   }
-} 
+}
