Add data encryption for user emails
- Implement Fernet symmetric encryption for sensitive user data
- Add hybrid SQLAlchemy properties for transparent encryption/decryption
- Create data migration script for existing user records
- Support environment variables for secure key management in production
- Update documentation with security best practices

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,38 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Virtual Environment
+venv/
+env/
+ENV/
+
+# Flask
+instance/
+.webassets-cache
+
+# Database
+*.db
+*.sqlite3
+
+# Logs
+*.log
+
+# Environment variables
+.env
+.flaskenv
+
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Encryption keys
+encryption_key.key
+*.key
