--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.2
 Flask-WTF==1.2.1
 email_validator==2.1.0
-Werkzeug==2.3.7 
+Werkzeug==2.3.7
+cryptography==44.0.2 
