--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,8 @@ Flask-Login==0.6.2
 Flask-WTF==1.2.1
 email_validator==2.1.0
 Werkzeug==2.3.7
-cryptography==44.0.2 
+cryptography==44.0.2
+Flask-Caching==2.1.0
+Flask-Assets==2.1.0
+cssmin==0.2.0
+jsmin==3.0.1 
